examples/test/testpolicy3150.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3150
  namespace: namespace121
spec:
  podSelector:
    matchLabels:
      key34: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value46
          key49: value6
      podSelector:
        matchLabels:
          key32: value11
          key30: value21
          key46: value6
